webstudio css style v3.1

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 <main>
 
    <!------------FILTER SECTION----------->
-    <section>
+    <section class="section">
         <div class="container filter-padding section">
          <h1 class="visually-hidden">Портфолио</h1>
         <ul class="filter-list list">
@@ -145,8 +145,8 @@
 </main>
 
 <!------------FOOTER SECTION----------->
-<footer class="footer">
-   <div class="container footer-padding">
+<footer class="footer section">
+   <div class="container">
         <a href="./index.html" class="logo-footer"><span class="accent-blue">Web</span><span class="accent-white">Studio</span></a>
 <address class="footer-address">
     <ul class="footer-contact">
