--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 <main>
         <!------------HERO SECTION----------->
     <section class="hero">
-       <div class="container section">
+       <div class="container ">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="hero-btn">Заказать услугу</button>
        </div>
     </section>
 
     <!------------ADVANTAGE SECTION----------->
-    <section class="advantage ">
+    <section class="advantage section">
        <div class="container section">
             <h2 class="visually-hidden">Наши приемущества</h2>
         <ul class="advantage-list">
@@ -75,8 +75,8 @@
     </section>
     
     <!------------ABOUT SECTION----------->
-    <section class="about">
-       <div class="container section">
+    <section class="about section">
+       <div class="container ">
             <h2 class="about-title">Чем мы занимаемся</h2>
         <ul class="about-list">
             <li class="about-items"> 
@@ -94,8 +94,8 @@
     </section>
 
     <!------------TEAM SECTION----------->
-    <section class="team ">
-       <div class="container section"> 
+    <section class="team section">
+       <div class="container"> 
        <h2 class="team-title">Наша команда</h2>   
     <ul class="team-list">
             <li class="team-margin">
@@ -135,8 +135,8 @@
 </main>
 
 <!------------FOOTER SECTION----------->
-<footer class="footer">
-   <div class="container footer-padding">
+<footer class="footer section">
+   <div class="container">
         <a href="./index.html" class="logo-footer"><span class="accent-blue">Web</span><span class="accent-white">Studio</span></a>
 <address class="footer-address">
     <ul class="footer-contact">
